testing suite refinment

--- a/AngerDetector.Application/AngerDetector.Application.csproj
+++ b/AngerDetector.Application/AngerDetector.Application.csproj
@@ -7,7 +7,12 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>AngerDetector</AssemblyName>
     <StartupObject>AngerDetector.App</StartupObject>
+    <ApplicationIcon>email.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="email.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
@@ -15,21 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AngerDetector.Service\AngerDetector.Service.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Properties\Settings.Designer.cs">
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
   </ItemGroup>
 
 </Project>
