--- a/AngerDetector.Tests/AngerDetector.Tests.csproj
+++ b/AngerDetector.Tests/AngerDetector.Tests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="FlaUI.UIA3" Version="4.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AngerDetector.Application\AngerDetector.Application.csproj" />
+    <ProjectReference Include="..\AngerDetector.Service\AngerDetector.Service.csproj" />
   </ItemGroup>
 
 </Project>
