--- a/AngerDetector.Tests/AngerDetector.Tests.csproj
+++ b/AngerDetector.Tests/AngerDetector.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
